--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: Some Guy
 email: your-email@domain.com
 description: A wonderful site
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  nnair12
 
 # Build settings
 markdown: kramdown
